sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:2: error: Missing closing brace `}' assumed here
public void bubbleSort()  {
^